# CyberUEBA_BehavioralIntel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  _smoke_test.py  docker-compose.enhanced.yml  docker-compose.yml  pyproject.toml  reembed_attack_users.py  reembed_usr234.py  regen_usr234_attack.py  regen_weekly_features.py  role_group_detection.py  run_enhanced_app.ps1  run_full_pipeline.py  run_pipeline.py  run_tier3_250.py  save_composite_csvs.py  streamlit_app.py  test_50_detect.py  test_50_users.py  threat_profile_detector.py  update_pptx.py
.claude/: settings.json
ACECARD_CE_May6/: 01_Solution_Brief.docx  02_Breakout_Talking_Points.docx  02_Breakout_Talking_Points_v2.docx  03_One_Page_Leave_Behind.docx  04_Quick_Reference_Card.docx  05_Speaker_Notes_Deep_Prep_Guide.docx  06_Detailed_Deep_Dive_Deck.pptx  06_Detailed_Deep_Dive_Deck_v2.pptx  07_Rigor_Preemptive_Cyber_Deck.pptx  22CT_Preemptive_ACECARD_Volt_Salt_Typhoon.pptx  22CT_Preemptive_ACECARD_Volt_Salt_Typhoon_F.pptx  22CT_Preemptive_ACECARD_Volt_Salt_Typhoon_F2.pptx  22CT_Preemptive_ACECARD_Volt_Salt_Typhoon_F3.pptx  22CT_Preemptive_ACECARD_Volt_Salt_Typhoon_v10.pptx  22CT_Preemptive_ACECARD_Volt_Salt_Typhoon_v11.pptx  22CT_Preemptive_ACECARD_Volt_Salt_Typhoon_v12.pptx  22CT_Preemptive_ACECARD_Volt_Salt_Typhoon_v2.pptx  22CT_Preemptive_ACECARD_Volt_Salt_Typhoon_v3.pptx  22CT_Preemptive_ACECARD_Volt_Salt_Typhoon_v4.pptx  22CT_Preemptive_ACECARD_Volt_Salt_Typhoon_v5.pptx  22CT_Preemptive_ACECARD_Volt_Salt_Typhoon_v6.pptx  22CT_Preemptive_ACECARD_Volt_Salt_Typhoon_v7.pptx  (+39 more)
api/: __init__.py  (+7 more)
(+396 files in other folders)
