[project]
name = "cyber-ueba"
version = "0.1.0"
description = "Cybersecurity UEBA with Temporal Trajectory Intelligence"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "psycopg2-binary>=2.9",
    "numpy>=1.26",
    "pandas>=2.1",
    "openai>=1.12",
    "pgvector>=0.2",
    "python-dotenv>=1.0",
    "pydantic>=2.5",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "tqdm>=4.66",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.3"]
